#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#

(unreleased)

    - Make a correction to port(1)'s determination of whether or not a port has
      been updated by making it compare ${version} and then ${revision} rather
      than a single comparison of the compound ${version}_${revision}; the
      latter reports 2.01_2 to be newer than 2.01.01a25_0 because, at the fifth
      character, `_' comes after `.' in ASCII lexicographic order.
      (boeyms in r25310)

Release 1.4.42 (17-May-2007 tagged at r25296 by jberry)

    - Fix reinplace, broken in 1.4.41 (eridius r25285).

Release 1.4.41 (16-May-2007 tagged at r25266 by jberry):

    - `port info` now supports new --index flag for using old behaviour (eridius r25256).

    - `port info` now opens the Portfile and displays up-to-date information.
      This allows information about variants to be displayed (eg. dependencies).
      Also allow `port info` to default to current directory if no name is provided
      (eridius r25255).
    
    - Add -E flag to reinplace, does the same thing as in sed (eridius r25251).

    - Add support for [nosync] flag in sources.conf to prevent a source from syncing
      during a `port sync` or `port selfupdate` (eridius r25236).
      Example: file:///Users/landonf/misc/MacPorts/dports [nosync]

    - Updating a file: source via svn update during port sync now uses the uid/gid
      of the owner of the working copy (eridius r25142).

    - Make port(1) convert description and long_description from lists to
      strings before printing to stdout; this enables the proper printing of
      semi-colons, brackets and other characters by way of Tcl escape sequences.
      The exceptions to this are the sequences for newline and carriage return
      (these break the flatfile PortIndex format by introducing line breaks).
      (boeyms r25110)

    - Evaluate variants at dportopen instead of dportexec. This ensures that